# qupid

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.ko.md  README.md  c-qupid.code-workspace  rootlogon.C
.github/workflows/: build.yml  docs.yml
doc/: Doxyfile
exe/: CMakeLists.txt
include/: QPCluster.hpp  QPClustering.hpp  QPDigitizerBase.hpp  QPDigitizerSquare.hpp  QPGeneral.hpp  QPMath.hpp  QPMatrix.hpp  QPMonteCarlo.hpp  QPPixel.hpp  QPPixelBase.hpp  QPRandom.hpp  QPRandomBase.hpp  QPSignalBase.hpp  QPSignalGaussian.hpp  QPVector.hpp
macro/: QPStyle.cpp  analysis_peak.cpp  dump_test6.C
src/: QPDigitizerBase.cpp  QPMath.cpp  QPMatrix.cpp  QPMonteCarlo.cpp  QPPixelBase.cpp  QPRandom.cpp  QPSignalBase.cpp  QPVector.cpp
test/: CMakeLists.txt  test2_gaussianSignal.cxx  test4_graphfactory.cxx  test5_puremontecarlo1.cxx  test6_puremontecarlo2.cxx  test7_montecarlo_csv.cxx
test/baseline/: test6_npix_ref.txt
tutorials/: CMakeLists.txt  tutorial1_gaussian_signal.cxx  tutorial2_cluster_size.cxx  tutorial3_montecarlo_csv.cxx  tutorial4_visualization.cxx
vis/include/: QPGraphFactory.hpp  QPRandomTRandom.hpp
vis/src/: QPGraphFactory.cpp
